--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -135,10 +135,12 @@ block content
                 .pages-list__links
                     a.pages-list__link.pages-list__link--check(href="supplier.html" target="_blank") Поставщик разводящая
                     a.pages-list__link.pages-list__link--check(href="s-personal-data.html" target="_blank") Личные данные
-                    a.pages-list__link.pages-list__link--work(href="s-manual-adding.html" target="_blank") Ручное добавление автомобиля
-                    a.pages-list__link.pages-list__link--postponed(href="s-view-card.html" target="_blank") Просмотр карточки
+                    a.pages-list__link.pages-list__link--check(href="s-manual-adding.html" target="_blank") Ручное добавление автомобиля
+                    a.pages-list__link.pages-list__link--check(href="s-view-card.html" target="_blank") Просмотр карточки
                     a.pages-list__link.pages-list__link--check(href="s-upload-db.html" target="_blank") Загрузить базу автомобилей
+                    a.pages-list__link.pages-list__link--work(href="s-cars.html" target="_blank") Мои автомобили
 
                 .title.title--36.pages-list__subtitle Личный кабинет сотрудника
                 .pages-list__links
                     a.pages-list__link.pages-list__link--check(href="employee.html" target="_blank") Сотрудник разводящая
+                    a.pages-list__link.pages-list__link--check(href="e-view-card.html" target="_blank") Просмотр карточки
