--- a/src/blocks/components/form/form.scss
+++ b/src/blocks/components/form/form.scss
@@ -146,6 +146,22 @@
         }
     }
 
+    &__flex--checkbox {
+        display: grid;
+        grid-template-columns: 260px minmax(0, 100%);
+        align-items: center;
+
+        @include max(mobile) {
+            grid-template-columns: 1fr;
+            gap: 8px;
+        }
+
+        .field {
+            width: 100%;
+            max-width: 100%;
+        }
+    }
+
     &__item {
         position: relative;
         width: 100%;
