--- a/src/blocks/modules/auto-card/auto-card.scss
+++ b/src/blocks/modules/auto-card/auto-card.scss
@@ -4,6 +4,10 @@
         align-items: flex-start;
         gap: 64px;
 
+        @include max(laptop) {
+            gap: 32px;
+        }
+
         @include max(tablet) {
             flex-direction: column;
             gap: 0;
@@ -18,15 +22,11 @@
         flex: 0 0 50%;
         width: 50%;
 
-        @include max(laptop-small) {
-            flex: 0 0 40%;
-            width: 40%;
-        }
-
         @include max(tablet) {
-            display: contents;
+            order: -1;
             width: 100%;
             flex-basis: auto;
+            margin-top: 30px;
         }
 
     }
@@ -65,13 +65,29 @@
     }
 
     &__controls {
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        z-index: 3;
+        margin-top: 32px;
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+
+        @include max(tablet) {
+            width: 100%;
+            max-width: 500px;
+        }
 
         @include max(mobile) {
-            display: none;
+            margin-top: 20px;
+            gap: 6px;
+        }
+    }
+
+    &__flex {
+        display: flex;
+        align-items: stretch;
+        gap: 12px;
+
+        .btn {
+            flex: 0 1 50%;
         }
     }
 
@@ -141,14 +157,23 @@
     &__title {
         color: $c-text;
         font-weight: 700;
+
+        @include max(tablet) {
+            order: -1;
+        }
     }
 
     &__params {
         margin-top: 20px;
+        margin-bottom: 32px;
         width: fit-content;
 
         @include max(mobile) {
             margin-top: 15px;
+        }
+
+        @include max(mobile) {
+            margin-bottom: 24px;
         }
     }
 
@@ -157,6 +182,11 @@
         display: flex;
         flex-direction: column;
         gap: 12px;
+
+        @include max(tablet) {
+            width: 100%;
+            max-width: 500px;
+        }
     }
 
 }
