--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -19,3 +19,4 @@ mixin mixins()
     include ../../blocks/modules/personal-data/personal-data
     include ../../blocks/modules/manual-adding/manual-adding
     include ../../blocks/modules/auto-card/auto-card
+    include ../../blocks/modules/s-cars/s-cars
