catalog in progress

--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -8,14 +8,10 @@
 @import "socials/socials";
 @import "chat/chat";
 @import "slider-controls/slider-controls";
-//@import "catalog-card/catalog-card";
-//@import "prod-controls/prod-controls";
-//@import "story-card/story-card";
-//@import "news-card/news-card";
+@import "tooltip/tooltip";
 //@import "pagination/pagination";
 //@import "quote/quote";
 //@import "video/video";
-//@import "list-width-icons/list-width-icons";
 //@import "cookie/cookie";
 //@import "media-slider/media-slider";
 @import "spoiler/spoiler";
