--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -8,3 +8,4 @@
 @import "personal-data/personal-data";
 @import "manual-adding/manual-adding";
 @import "auto-card/auto-card";
+@import "s-cars/s-cars";
