--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -31,6 +31,10 @@ $c-bg-dark: #101010;
 $c-input-grey: #6B7280;
 $c-text: var(--c-text);
 $c-bg-main: #EDF0F6;
+$c-status-red: #DC2626;
+$c-status-green: #22C55E;
+$c-status-blue: #2453E1;
+$c-status-yellow: #EAB308;
 
 
 $c-accent-2: #FC00FF;
