--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -9,6 +9,7 @@ mixin mixins()
     include ../../blocks/components/socials/socials
     include ../../blocks/components/slider-controls/slider-controls
     include ../../blocks/components/chat/chat
+    include ../../blocks/components/tooltip/tooltip
 
     //- Модули
     include ../../blocks/modules/header/header
