--- a/src/blocks/modules/s-cars/s-cars.scss
+++ b/src/blocks/modules/s-cars/s-cars.scss
@@ -1,50 +1,44 @@
 .s-cars {
 
-    &__list {
-        margin-top: 22px;
-        display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        gap: 12px;
-    }
-
-    &--3 &__list {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-
-        @include max(laptop-small) {
-            grid-template-columns: repeat(2, minmax(0, 1fr));
-        }
-
-        @include max(mobile) {
-            grid-template-columns: minmax(0, 1fr);
-        }
-    }
-
-    &--2 &__list {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-
-        @include max(mobile) {
-            grid-template-columns: minmax(0, 1fr);
-        }
-    }
-
-    &__card {
+    &__header {
         display: flex;
-        align-items: center;
         justify-content: space-between;
-        background-color: $c-white;
+        gap: 32px;
+    }
+
+    &__title {
+        margin-top: 6px;
+    }
+
+    &__list {
+        margin-top: 26px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__card+&__card {
+        border-top: 1px solid #E4E4E7;
+    }
+}
+
+.s-car {
+    display: flex;
+    align-items: flex-start;
+    gap: 24px;
+    background-color: $c-white;
+    padding: 24px 0;
+
+    &__img {
+        position: relative;
+        flex: 0 0 8%;
+        aspect-ratio: 1 / 0.75;
         border-radius: 16px;
         overflow: hidden;
-        padding: 16px;
-        box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
-        border: 1px solid #E4E4E7;
 
-        @include max(tablet-small) {
-            padding: 12px;
-            border-radius: 8px;
-        }
-
-        @include max(tablet) {
-            padding: 10px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
 
@@ -52,14 +46,9 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 12px;
-        max-width: 50%;
-        flex: 0 0 50%;
-        align-self: stretch;
-        position: relative;
-        z-index: 3;
-        margin-top: 16px;
-        margin-bottom: 16px;
+        gap: 8px;
+        flex: 1 1 100%;
+        margin-right: 12px;
 
         @include max(tablet) {
             margin-top: 0;
@@ -69,60 +58,107 @@
         }
     }
 
-    &__subtitle {
+    &__bottom {
+        display: flex;
+        align-items: flex-start;
+        gap: 33px;
+    }
+
+    &__price {
+        min-width: 130px;
+        flex-shrink: 0;
+
+        .current {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 150%;
+            letter-spacing: 0;
+            color: $c-text;
+
+            svg {
+                width: 9px;
+                height: 12px;
+                opacity: 0;
+            }
+        }
+
+        .old {
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 150%;
+            letter-spacing: 0;
+            color: #6B7280;
+            text-decoration: line-through;
+        }
+    }
+
+    &__price--up {
+        .current {
+            color: $c-status-red;
+
+            svg {
+                opacity: 1;
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    &__title {
         font-family: $ff-inter;
         font-weight: 700;
-        font-size: 20px;
-        line-height: 120%;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0;
+    }
+
+    &__status {
+        position: relative;
+        padding-left: 19px;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 150%;
         letter-spacing: 0;
         color: $c-text;
+        flex-shrink: 0;
 
-        @include max(tablet-small) {
-            font-size: 18px;
+        &::after {
+            position: absolute;
+            content: '';
+            width: 12px;
+            height: 12px;
+            border-radius: 100%;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
         }
+    }
+
+    &__status--red:after {
+        background-color: $c-status-red;
+    }
+
+    &__status--green:after {
+        background-color: $c-status-green;
+    }
+
+    &__status--blue:after {
+        background-color: $c-status-blue;
+    }
+
+    &__status--yellow:after {
+        background-color: $c-status-yellow;
+    }
+
+    &__detail {
+        margin-right: 32px;
     }
 
     &__btns {
         display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        margin-top: auto;
-        width: 100%;
+        flex: 0 0 auto;
+        margin-left: auto;
+        gap: 8px;
     }
 
-    &__btn.btn {
-        max-width: 100%;
-        padding-left: 16px;
-        padding-right: 16px;
-        border-radius: 16px;
 
-        @include max(mobile) {
-            padding: 15.5px 10px;
-            font-size: 12px;
-        }
-    }
-
-    &__img {
-        position: relative;
-        flex: 0 0 50%;
-        aspect-ratio: 1 / 0.959;
-        max-width: 225px;
-        mask-clip: border-box;
-        mask-size: 100% 100%;
-        mask-image: url(../img/masks/link_card.svg);
-
-        @include max(mobile) {
-            flex: 0 0 47%;
-        }
-
-        @include max(mobile) {
-            max-width: 140px;
-        }
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
 }
