--- a/src/views/pages/s-cars.pug
+++ b/src/views/pages/s-cars.pug
@@ -1,30 +1,32 @@
 extends ../layouts/default
 
 block variables
-	- const title = "Карточка авто"
-	- const footerType = 'supplier'
-	- const headerType = 'supplier'
+    - const title = "Карточка авто"
+    - const footerType = 'supplier'
+    - const headerType = 'supplier'
 
 block content
-	.page-layout(data-js="pageLayout")
+    .page-layout(data-js="pageLayout")
 
-		section.section.section--bc
-			.section__container.section__content
-				+breadcrumbs({
-					items: [
-						{
-							name: 'Личный кабинет',
-							link: 'javascript:void(0);'
-						},
-						{
-							name: 'Каталог',
-							link: 'javascript:void(0);'
-						},
-						{
-							name: 'Карточка авто',
-							link: 'javascript:void(0);'
-						}
-					],
-				})
+        section.section.section--bc
+            .section__container.section__content
+                +breadcrumbs({
+                    items: [
+                        {
+                            name: 'Личный кабинет',
+                            link: 'javascript:void(0);'
+                        },
+                        {
+                            name: 'Каталог',
+                            link: 'javascript:void(0);'
+                        },
+                        {
+                            name: 'Карточка авто',
+                            link: 'javascript:void(0);'
+                        }
+                    ],
+                })
 
-		+s-cars
+        +s-cars({
+            hasDLBtn: true
+        })
