--- a/src/blocks/modules/modals/modals.pug
+++ b/src/blocks/modules/modals/modals.pug
@@ -179,15 +179,7 @@ noindex
                                     },
                                 })
 
-
-                            +btn({
-                                classes: 'form__submit',
-                                type: 'button',
-                                buttonType: 'submit',
-                                name: 'Отправить заявку на регистрацию',
-                                cMode: 'accent',
-                                sMode: 'full'
-                            })
+                            input.btn.form__submit.btn--accent.btn--full(type="submit" name="register_submit_button" value="Отправить заявку на регистрацию")
 
                             .form__privacy.form-privacy(data-js="formField")
                                 .form-privacy__flex
@@ -310,15 +302,7 @@ noindex
                                     },
                                 })
 
-
-                            +btn({
-                                classes: 'form__submit',
-                                type: 'button',
-                                buttonType: 'submit',
-                                name: 'Отправить заявку на регистрацию',
-                                cMode: 'accent',
-                                sMode: 'full'
-                            })
+                            input.btn.form__submit.btn--accent.btn--full(type="submit" name="register_submit_button" value="Отправить заявку на регистрацию")
 
                             .form__privacy.form-privacy(data-js="formField")
                                 .form-privacy__flex
