--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -138,7 +138,8 @@ block content
                     a.pages-list__link.pages-list__link--check(href="s-manual-adding.html" target="_blank") Ручное добавление автомобиля
                     a.pages-list__link.pages-list__link--check(href="s-view-card.html" target="_blank") Просмотр карточки
                     a.pages-list__link.pages-list__link--check(href="s-upload-db.html" target="_blank") Загрузить базу автомобилей
-                    a.pages-list__link.pages-list__link--work(href="s-cars.html" target="_blank") Мои автомобили
+                    a.pages-list__link.pages-list__link--check(href="s-cars.html" target="_blank") Мои автомобили
+                    a.pages-list__link.pages-list__link--check(href="s-cars-archive.html" target="_blank") Архивные автомобили
 
                 .title.title--36.pages-list__subtitle Личный кабинет сотрудника
                 .pages-list__links
